# talleresenrique

talleres-admin/: .gitignore  INSTRUCCIONES.md  index.html  package-lock.json  package.json  vite.config.js
talleres-admin/src-tauri/: Cargo.toml  tauri.conf.json
talleres-admin/src/assets/: main.css
talleres-admin/src/components/: EmojiPicker.vue
talleres-admin/src/lib/: supabase.js
talleres-admin/src/router/: index.js
talleres-admin/src/stores/: auth.js  parts.js
talleres-admin/src/views/: AdminPanel.vue  LoginView.vue
talleres-joseluis/: index.html  package-lock.json  package.json  supabase-media.sql  supabase-setup.sql
talleres-joseluis/src/: App.vue
talleres-joseluis/src/assets/: main.css
talleres-joseluis/src/components/: FooterBar.vue  NavBar.vue  PartCard.vue  PartModal.vue  WhatsAppFloat.vue
talleres-joseluis/src/lib/: supabase.js
talleres-joseluis/src/router/: index.js
talleres-joseluis/src/stores/: auth.js  contact.js  parts.js
talleres-joseluis/src/views/: CatalogoView.vue  ContactoView.vue  HomeView.vue  ServiciosView.vue
talleres-joseluis/src/views/admin/: AdminLogin.vue  AdminPanel.vue
