[package]
name = "talleres-admin"
version = "1.0.0"
description = "Panel Admin de Talleres Enrique"
authors = ["Talleres Enrique"]
edition = "2021"

[lib]
name = "talleres_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "talleres-admin"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
